# telvid-vizane

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  app_settings.json  create_installer.iss  download_history.json  pyproject.toml  requirements.txt  run.py  temp_reset_license.py
.github/workflows/: ci.yml
config/: app_config.ini  logging.conf
docs/: API.md  INSTALLATION.md
locales/: en.json  fr.json
src/: __init__.py  add_key_to_db.py  auto_updater.py  build.py  converter.py  downloader.py  generate_key.py  i18n.py  license_manager.py  license_server.py  logger.py  main.py
src/gui/: animations.py  downloads_panel.py  icons.py  payment_window.py  video_player.py
src/utils/: __init__.py  advanced_logger.py  advanced_updater.py  config_manager.py  download_history.py  error_handler.py  settings_manager.py  validators.py
tests/: __init__.py  conftest.py  test_downloader.py  test_license_manager.py  test_main.py
